--- a/app/src/main/res/layout/activity_feed_asistente.xml
+++ b/app/src/main/res/layout/activity_feed_asistente.xml
@@ -17,30 +17,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0sp"
-            android:orientation="horizontal"
+            android:layout_marginBottom="10sp"
             android:layout_weight="0.12"
-            android:layout_marginBottom="10sp">
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="match_parent"
-                android:text="FEED"
-                android:layout_marginRight="10sp">
+                android:layout_marginRight="10sp"
+                android:text="FEED">
 
             </TextView>
 
             <Spinner
                 android:layout_width="200sp"
-                android:layout_height="65sp">
-            </Spinner>
+                android:layout_height="65sp"></Spinner>
 
         </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="1sp"
-            android:layout_weight="0.5"
-            android:layout_gravity="top">
+            android:layout_gravity="top"
+            android:layout_weight="0.5">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -213,6 +212,7 @@
 
             </LinearLayout>
         </ScrollView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1sp"
