--- a/app/src/main/res/layout/activity_menu_asistente.xml
+++ b/app/src/main/res/layout/activity_menu_asistente.xml
@@ -49,6 +49,8 @@
                     android:layout_marginEnd="15sp"
                     android:layout_width="170sp"
                     android:layout_height="120sp"
+                    android:padding="16sp"
+                    android:drawableTop="@drawable/ic_baseline_event_note_24"
                     android:text="EVENTOS"
                     android:textColor="@color/white"
                     android:background="@drawable/button_menu"
@@ -62,6 +64,8 @@
                     android:id="@+id/bttnMiPerfil"
                     android:layout_width="170sp"
                     android:layout_height="120sp"
+                    android:padding="16sp"
+                    android:drawableTop="@drawable/ic_baseline_person_24"
                     android:text="MI PERFIL"
                     android:textColor="@color/white"
                     android:background="@drawable/button_menu"
@@ -82,8 +86,10 @@
                     android:id="@+id/bttnGuardados"
                     android:layout_marginEnd="15sp"
                     android:layout_width="170sp"
+                    android:padding="16sp"
                     android:layout_height="120sp"
-                    android:text="GUARDADOS"
+                    android:drawableStart="@drawable/ic_star"
+                    android:text="FAVORITOS"
                     android:textColor="@color/white"
                     android:background="@drawable/button_menu"
                     android:textSize="20sp"
@@ -95,6 +101,8 @@
                     android:id="@+id/bttnCerrarSesion"
                     android:layout_width="170sp"
                     android:layout_height="120sp"
+                    android:padding="16sp"
+                    android:drawableTop="@drawable/ic_baseline_exit_to_app_24"
                     android:text="CERRAR SESIÓN"
                     android:textColor="@color/white"
                     android:background="@drawable/button_menu"
