--- a/app/src/main/res/layout/activity_menu_organizador.xml
+++ b/app/src/main/res/layout/activity_menu_organizador.xml
@@ -44,6 +44,8 @@
 
                 <Button
                     android:id="@+id/bttnGestionarEventos"
+                    android:padding="16sp"
+                    android:drawableStart="@drawable/ic_baseline_event_note_24"
                     android:layout_width="150sp"
                     android:layout_height="120sp"
                     android:layout_marginEnd="15sp"
@@ -54,6 +56,8 @@
                 </Button>
                 <Button
                     android:id="@+id/bttnModificarPerfilAdmin"
+                    android:padding="16sp"
+                    android:drawableStart="@drawable/ic_baseline_person_24"
                     android:layout_width="150sp"
                     android:layout_height="120sp"
                     android:textColor="@color/white"
@@ -72,6 +76,8 @@
 
                 <Button
                     android:id="@+id/bttnCerrarSesion"
+                    android:padding="16sp"
+                    android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
                     android:layout_width="150sp"
                     android:layout_height="120sp"
                     android:textColor="@color/white"
@@ -79,8 +85,7 @@
                     android:text="Cerrar Sesión">
 
                 </Button>
-
-
+                
             </LinearLayout>
 
 
