clases ordenadas en paquetes

--- a/app/src/main/res/layout/activity_ventana_tickets.xml
+++ b/app/src/main/res/layout/activity_ventana_tickets.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="16sp"
     android:orientation="vertical"
-    tools:context=".VentanaTickets">
+    tools:context=".eventdata.VentanaTickets">
 
     <LinearLayout
         android:layout_width="match_parent"
