--- a/app/src/main/res/layout/activity_crear_cuenta.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CrearCuenta"
+    tools:context=".ventanas.CrearCuenta"
     android:padding="16dp">
+
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
