--- a/app/src/main/res/layout/activity_cuentas_bloqueadas.xml
+++ b/app/src/main/res/layout/activity_cuentas_bloqueadas.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="16sp"
     android:orientation="vertical"
-    tools:context=".CuentasBloqueadas">
+    tools:context=".ventanas.CuentasBloqueadas">
 
     <LinearLayout
         android:layout_width="match_parent"
