--- a/app/src/main/res/layout/activity_feed_asistente.xml
+++ b/app/src/main/res/layout/activity_feed_asistente.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".FeedAsistente"
+    tools:context=".ventanas.FeedAsistente"
     android:padding="16dp">
 
     <LinearLayout
