--- a/app/src/main/res/layout/activity_gestionar_eventos_org.xml
+++ b/app/src/main/res/layout/activity_gestionar_eventos_org.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".GestionarEventosOrg"
+    tools:context=".ventanas.GestionarEventosOrg"
     android:padding="16dp">
 
     <LinearLayout
