--- a/app/src/main/res/layout/activity_menu_admin.xml
+++ b/app/src/main/res/layout/activity_menu_admin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16sp"
-    tools:context=".MenuAdmin">
+    tools:context=".ventanas.MenuAdmin">
 
     <LinearLayout
         android:layout_width="match_parent"
