--- a/app/src/main/res/layout/activity_menu_organizador.xml
+++ b/app/src/main/res/layout/activity_menu_organizador.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16sp"
-    tools:context=".MenuOrganizador">
+    tools:context=".ventanas.MenuOrganizador">
 
     <LinearLayout
         android:layout_width="match_parent"
