--- a/app/src/main/res/layout/activity_menu_asistente.xml
+++ b/app/src/main/res/layout/activity_menu_asistente.xml
@@ -21,6 +21,7 @@
             android:layout_gravity="top">
 
             <TextView
+                android:id="@+id/txtBienvenida"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="BIENVENIDO [NOMBRE]"
