--- a/app/src/main/res/layout/lista_eventos.xml
+++ b/app/src/main/res/layout/lista_eventos.xml
@@ -58,6 +58,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="[FECHA]"
+                    android:layout_marginEnd="20sp"
+                    android:textSize="15sp">
+
+                </TextView>
+
+                <TextView
+                    android:id="@+id/ubicacionEvento"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="[UBICACION]"
                     android:textSize="15sp">
 
                 </TextView>
