--- a/app/src/main/res/layout/activity_agregar_evento.xml
+++ b/app/src/main/res/layout/activity_agregar_evento.xml
@@ -32,88 +32,78 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_weight="0.87"
+            android:layout_weight="0.70"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_marginTop="20sp"
-                android:orientation="vertical"
-                android:padding="16sp">
+                    <EditText
+                        android:id="@+id/nombreEvento"
+                        android:layout_width="255dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/ic_star"
+                        android:drawablePadding="10sp"
+                        android:ems="10"
+                        android:hint="Nombre Evento"
+                        android:inputType="textPersonName"
+                        android:padding="10sp" />
 
-                <EditText
-                    android:id="@+id/nombreEvento"
-                    android:layout_width="255dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/ic_star"
-                    android:drawablePadding="10sp"
-                    android:ems="10"
-                    android:hint="Nombre Evento"
-                    android:inputType="textPersonName"
-                    android:padding="10sp" />
+                    <EditText
+                        android:id="@+id/ubicacionEvento"
+                        android:layout_width="255dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="30sp"
 
-                <EditText
-                    android:id="@+id/ubicacionEvento"
-                    android:layout_width="255dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="30sp"
-                    android:layout_weight="1"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/ic_baseline_location_on_24"
-                    android:drawablePadding="10sp"
-                    android:ems="10"
-                    android:hint="Ubicación"
-                    android:inputType="textEmailAddress"
-                    android:padding="10sp" />
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/ic_baseline_location_on_24"
+                        android:drawablePadding="10sp"
+                        android:ems="10"
+                        android:hint="Ubicación"
+                        android:inputType="textEmailAddress"
+                        android:padding="10sp" />
 
-                <EditText
-                    android:id="@+id/registerPassword"
-                    android:layout_width="255dp"
-                    android:layout_height="150sp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="30sp"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/ic_baseline_edit_24"
-                    android:drawablePadding="10sp"
-                    android:ems="10"
-                    android:hint="Descripción"
-                    android:inputType="textPassword"
-                    android:padding="10sp" />
+                    <EditText
+                        android:id="@+id/descripcionEvento"
+                        android:layout_width="255dp"
+                        android:layout_height="150sp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="30sp"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/ic_baseline_edit_24"
+                        android:drawablePadding="10sp"
+                        android:ems="10"
+                        android:hint="Descripción"
+                        android:inputType="textMultiLine"
+                        android:padding="10sp" />
 
-                <EditText
-                    android:id="@+id/fechaEvento"
-                    android:layout_width="255dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="30sp"
-                    android:layout_weight="1"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/ic_baseline_calendar_month_24"
-                    android:drawablePadding="10sp"
-                    android:ems="10"
-                    android:hint="Fecha"
-                    android:inputType="textPassword"
-                    android:padding="10sp" />
+                    <EditText
+                        android:id="@+id/fechaEvento"
+                        android:layout_width="255dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="30sp"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/ic_baseline_calendar_month_24"
+                        android:drawablePadding="10sp"
+                        android:ems="10"
+                        android:hint="Fecha"
+                        android:inputType="textPassword"
+                        android:padding="10sp" />
 
-                <Spinner
-                    android:id="@+id/spinnerTipoEvento"
-                    android:layout_width="230sp"
-                    android:layout_height="50sp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20sp" />
-
+                    <Spinner
+                        android:id="@+id/spinnerTipoEvento"
+                        android:layout_width="230sp"
+                        android:layout_height="50sp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20sp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="190dp"
+                android:layout_height="0sp"
+                android:layout_weight="0.2"
                 android:layout_marginTop="0sp"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -137,5 +127,4 @@
 
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 </RelativeLayout>
