--- a/app/src/main/res/layout/activity_agregar_evento.xml
+++ b/app/src/main/res/layout/activity_agregar_evento.xml
@@ -36,7 +36,7 @@
             android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/nombreEvento"
+                        android:id="@+id/nombreEventoadd"
                         android:layout_width="255dp"
                         android:layout_height="45dp"
                         android:layout_gravity="center"
@@ -49,7 +49,7 @@
                         android:padding="10sp" />
 
                     <EditText
-                        android:id="@+id/ubicacionEvento"
+                        android:id="@+id/ubicacionEventoadd"
                         android:layout_width="255dp"
                         android:layout_height="45dp"
                         android:layout_gravity="center"
@@ -64,7 +64,7 @@
                         android:padding="10sp" />
 
                     <EditText
-                        android:id="@+id/descripcionEvento"
+                        android:id="@+id/descripcionEventoadd"
                         android:layout_width="255dp"
                         android:layout_height="125sp"
                         android:layout_gravity="center"
@@ -78,7 +78,7 @@
                         android:padding="10sp" />
 
                     <EditText
-                        android:id="@+id/fechaEvento"
+                        android:id="@+id/fechaEventoadd"
                         android:layout_width="255dp"
                         android:layout_height="45dp"
                         android:layout_gravity="center"
@@ -88,7 +88,7 @@
                         android:drawablePadding="10sp"
                         android:ems="10"
                         android:hint="Fecha DD/MM/AAAA"
-                        android:inputType="textPassword"
+                        android:inputType="text"
                         android:padding="10sp" />
 
                     <Spinner
